Changelog
=========

3.0a1 - unreleased
------------------

* Avoid an extra unindex scan for determining length changes in index_object.
  [hannosch]

* Declared support for new ILimitedResultIndex interface and require at least
  Zope 2.13.0a3.
  [hannosch]

* Merge in optimizations from ``experimental.catalogqueryplan``.
  [hannosch]

* PEP8 cleanup and minor optimizations in un/index code.
  [hannosch]

* Specify distribution dependencies.
  [hannosch]

2.9 - 2010-07-18
----------------

* Update license to GPL version 2 only.
  [hannosch]

2.8 - 2010-05-01
----------------

* No longer depend directly on test internals of PathIndex.
  [hannosch]

2.7 - 2009-11-13
----------------

* Added AccessControl import to tests to avoid cyclic import issue in
  Zope 2.12.
  [davisagli]

2.6 - 2009-05-18
----------------

* Clarified license to be only GPL.
  [hannosch]

* Declare package dependencies and fixed deprecation warnings for use
  of Globals.
  [hannosch]

2.5 - December 19, 2008
-----------------------

* Cleaned out tests: removing ZTC cruft, turning them into proper unit tests
  and removing tests that tested other non-index components.
  [mj]

* Fixed level handling for queries where a (path, level) tuple is passed in
  instead of using the general level parameter.
  [mj]

* Refactored and documented the index codebase. Several bugs were discovered 
  and solved in the process. Missing functionality was also added, all search
  options should now work across all scenarios.
  [mj]

2.4.1 - September 28, 2008
--------------------------

- Fix typo in setup.py which broke installation of the egg
  [ree]

  

2.4 - September 11, 2006
------------------------

- Relaxed a check for path only allowing strings so far. Now we except all
  basestrings. This closes http://dev.plone.org/plone/ticket/5617.
  [hannosch]

- Converted log infrastructure to use Python's logging module instead zLOG.
  [hannosch] 

2.3 - December 18, 2005
-----------------------
